# TDFM

./: .gitignore  CMakeLists.txt  LICENSE.txt  architecture.txt
include/: base_op.h  tdfm.h
src/: base_op.c  lbash.c  tdfm.c  tdfm_control.c
src/fm/: archive.cpp  archive.h  conf.h  main.cpp  msg.cpp  msg.h  win_utils.cpp  win_utils.h
test/: test_init.c  test_read.c
